# rsomics-multibigwig-summary

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs  smoke.rs
tests/golden/: a.bw  b.bw  regions.bed  regions_unsorted.bed
